--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -12,4 +12,7 @@
   </fieldset>
 </form>
   {% endif %}
-{% include custom/navigation.html %}
+
+<ul class="main-navigation">
+  <li><a href="{{ root_url }}/">Curriculum Index</a></li>
+</ul>
